--- a/provisioning/roles/geerlingguy.apache/tasks/main.yml
+++ b/provisioning/roles/geerlingguy.apache/tasks/main.yml
@@ -35,6 +35,24 @@
 # Configure Apache.
 - include_tasks: "configure-{{ ansible_os_family }}.yml"
 
+- name: Add MediaCommons main htaccess configuration.
+  template:
+    src: "drupal-main-htaccess.conf.j2"
+    dest: "/etc/apache2/conf-available/drupal-main-htaccess.conf"
+    owner: root
+    group: root
+    mode: 0644
+  notify: restart apache
+
+- name: Add MediaCommons files htaccess configuration.
+  template:
+    src: "drupal-files-htaccess.conf.j2"
+    dest: "/etc/apache2/conf-available/drupal-files-htaccess.conf"
+    owner: root
+    group: root
+    mode: 0644
+  notify: restart apache
+
 - name: Ensure Apache has selected state and enabled on boot.
   service:
     name: "{{ apache_service }}"
