--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -39,16 +39,13 @@
     - { role: geerlingguy.php-versions, when: php_version != '', tags: ['php', 'xdebug', 'database'] }
     - { role: geerlingguy.php, tags: ['php'] }
     - { role: geerlingguy.php-pecl, tags: ['php'] }
-    - { role: geerlingguy.composer }
     - { role: geerlingguy.mysql, when: drupal_db_backend == 'mysql', tags: ['database'] }
     - { role: geerlingguy.php-mysql, when: drupal_db_backend == 'mysql', tags: ['php', 'database'] }
     - { role: geerlingguy.php-pgsql, when: drupal_db_backend == 'pgsql', tags: ['php', 'database'] }
-    - { role: geerlingguy.nginx, when: drupalvm_webserver == 'nginx', tags: ['webserver'] }    
-    - { role: geerlingguy.postgresql, when: drupal_db_backend == 'pgsql', tags: ['database'] }
+    - { role: dismorfo.nodejs }
+    - { role: dismorfo.nightwatch }
 
     # Conditionally-installed roles.
-    - { role: geerlingguy.drupal-console, when: 'drupal_major_version > 7 and "drupalconsole" in installed_extras' }
-    - { role: geerlingguy.drush, when: '"drush" in installed_extras' }
     - { role: geerlingguy.memcached, when: '"memcached" in installed_extras' }
     - { role: geerlingguy.php-memcached, when: '"memcached" in installed_extras', tags: ['php'] }
 
@@ -86,14 +83,9 @@
     - role: geerlingguy.java
       when: >
         "java" in installed_extras or
-        "solr" in installed_extras or
-        "selenium" in installed_extras or
-        "elasticsearch" in installed_extras
+        "solr" in installed_extras
 
-    - { role: arknoll.selenium, when: '"selenium" in installed_extras' }
-    - { role: geerlingguy.solr, when: '"solr" in installed_extras' }
-    - { role: geerlingguy.elasticsearch, when: '"elasticsearch" in installed_extras' }
-    - { role: geerlingguy.varnish, when: '"varnish" in installed_extras' }
+    - { role: geerlingguy.solr  }
     - { role: drupalvm.www, tags: ['webserver'] }
     - { role: geerlingguy.drupal, tags: ['drupal'] }
 
