--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -29,20 +29,20 @@
 
   roles:
     # Essential roles.
-    - { role: geerlingguy.repo-remi, when: ansible_os_family == 'RedHat', tags: ['webserver', 'php'] }
-    - { role: drupalvm.hostname, when: hostname_configure }
-    - { role: geerlingguy.firewall, when: firewall_enabled }
+    - { role: drupalvm.hostname }
+    - { role: geerlingguy.firewall }
     - { role: geerlingguy.git }
     - { role: geerlingguy.postfix }
-    - { role: geerlingguy.apache, when: drupalvm_webserver == 'apache', tags: ['webserver']}
-    - { role: geerlingguy.apache-php-fpm, when: drupalvm_webserver == 'apache', tags: ['webserver'] }    
+    - { role: geerlingguy.apache, tags: ['webserver']}
+    - { role: geerlingguy.apache-php-fpm, tags: ['webserver'] }    
     - { role: geerlingguy.php-versions, when: php_version != '', tags: ['php', 'xdebug', 'database'] }
     - { role: geerlingguy.php, tags: ['php'] }
     - { role: geerlingguy.php-pecl, tags: ['php'] }
-    - { role: geerlingguy.mysql, when: drupal_db_backend == 'mysql', tags: ['database'] }
-    - { role: geerlingguy.php-mysql, when: drupal_db_backend == 'mysql', tags: ['php', 'database'] }
-    - { role: geerlingguy.php-pgsql, when: drupal_db_backend == 'pgsql', tags: ['php', 'database'] }
-    - { role: dismorfo.nodejs }
+    - { role: geerlingguy.mysql, tags: ['database'] }
+    - { role: geerlingguy.php-mysql, tags: ['php', 'database'] }
+    - { role: dismorfo.chromium }    
+    - { role: dismorfo.nodejs }    
+    - { role: dismorfo.xvfb }
     - { role: dismorfo.nightwatch }
 
     # Conditionally-installed roles.
@@ -66,25 +66,17 @@
 
     - role: thom8.php-upload-progress
       workspace: "/root/php{{ php_version }}"
-      when: '"upload-progress" in installed_extras'
       tags: ['php']
 
     - { role: geerlingguy.blackfire, when: '"blackfire" in installed_extras' }
-    - { role: geerlingguy.adminer, when: '"adminer" in installed_extras', tags: ['database'] }
+    - { role: geerlingguy.adminer, tags: ['database'] }
     - { role: geerlingguy.pimpmylog, when: '"pimpmylog" in installed_extras' }
     - { role: geerlingguy.daemonize, when: '"mailhog" in installed_extras' }
     - { role: geerlingguy.mailhog, when: '"mailhog" in installed_extras' }
     - { role: franklinkim.newrelic, when: '"newrelic" in installed_extras' }
-    - { role: geerlingguy.nodejs, when: '"nodejs" in installed_extras' }
-    - { role: geerlingguy.redis, when: '"redis" in installed_extras' }
-    - { role: geerlingguy.php-redis, when: '"redis" in installed_extras', tags: ['php'] }
-    - { role: geerlingguy.ruby, when: '"ruby" in installed_extras' }
+    - { role: geerlingguy.ruby }
 
-    - role: geerlingguy.java
-      when: >
-        "java" in installed_extras or
-        "solr" in installed_extras
-
+    - { role: geerlingguy.java  }
     - { role: geerlingguy.solr  }
     - { role: drupalvm.www, tags: ['webserver'] }
     - { role: geerlingguy.drupal, tags: ['drupal'] }
@@ -99,12 +91,6 @@
     - include_tasks: tasks/apparmor.yml
       when: ansible_os_family == 'Debian' and drupal_db_backend == 'mysql'
       tags: ['database']
-
-    - include_tasks: tasks/drush-aliases.yml
-      when: configure_drush_aliases
-
-    - import_tasks: tasks/cron.yml
-      tags: ['cron']
 
     - include_tasks: tasks/dashboard.yml
       when: dashboard_install_dir is defined and dashboard_install_dir != ''
