--- a/provisioning/tasks/extras.yml
+++ b/provisioning/tasks/extras.yml
@@ -8,3 +8,9 @@
   yum: "name={{ item }} state=present"
   with_items: "{{ extra_packages | list }}"
   when: ansible_os_family == 'RedHat' and extra_packages | length
+
+- name: Install Git Extras
+  apt:
+    name: git-extras
+    state: latest
+  when: ansible_os_family == 'Debian'
