--- a/provisioning/roles/dismorfo.nodejs/tasks/main.yml
+++ b/provisioning/roles/dismorfo.nodejs/tasks/main.yml
@@ -1,15 +1,21 @@
 ---
 
-- name: Download Node.js 8.x LTS Carbon repo.
+- name: Download Node.js 10.x.
   get_url:
-    url: "https://rpm.nodesource.com/setup_8.x"
-    dest: "/root/nodejs_setup_8.x"
+    url: "https://deb.nodesource.com/setup_10.x"
+    dest: "/root/nodejs_setup_10.x"
 
-- name: Install Node.js 8.x LTS Carbon repo
+- name: Install Node.js 10.x repository
   command: >
-    bash /root/nodejs_setup_8.x
+    bash /root/nodejs_setup_10.x
 
-- name: Install Node.js 8.x LTS Carbon
-  yum:
+- name: Install Node.js 10.x
+  apt:
     name: nodejs
-    state: latest
+    state: latest  
+    install_recommends: yes
+
+- name: Ensure Node.js 10.x is installed.
+  package:
+    name: "nodejs"
+    state: present
