--- a/provisioning/roles/geerlingguy.php/tasks/setup-Debian.yml
+++ b/provisioning/roles/geerlingguy.php/tasks/setup-Debian.yml
@@ -4,9 +4,10 @@
 
 - name: Ensure PHP packages are installed.
   apt:
-    name: "{{ php_packages }}"
+    name: "{{ item }}"
     state: "{{ php_packages_state }}"
     install_recommends: "{{ php_install_recommends }}"
+  with_items: "{{ php_packages }}"
   register: php_package_install
   notify: restart webserver
 
